syntax = "proto3";

import "common/common.proto";

option java_package = "com.studhub.dataserver.inventory";
option java_multiple_files = true;

package com.studhub.inventory;

option csharp_namespace = "Studhub.Grpc.Data";


service InventoryService {
  rpc SetInventories(com.studhub.common.UpdateRequest) returns(com.studhub.common.UpdateResponse);
}

